force-app/main/default/objects/Security_Register__c/Security_Register__c.object-meta.xml
<CustomObject>
    <label>Security Register</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Security Register Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Registers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>