force-app/main/default/objects/Security_Register__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50 lacs - 80 lacs</fullName>
            </value>
            <value>
                <fullName>80 lacs - 1cr</fullName>
            </value>
            <value>
                <fullName>1cr - 1.5cr</fullName>
            </value>
            <value>
                <fullName>1.5cr - 2cr</fullName>
            </value>
            <value>
                <fullName>2cr - 3cr</fullName>
            </value>
            <value>
                <fullName>3cr - 4cr</fullName>
            </value>
            <value>
                <fullName>4cr - 5cr</fullName>
            </value>
            <value>
                <fullName>5cr - 6cr</fullName>
            </value>
            <value>
                <fullName>6cr - 7cr</fullName>
            </value>
            <value>
                <fullName>8cr - 10cr</fullName>
            </value>
            <value>
                <fullName>10cr - 12cr</fullName>
            </value>
            <value>
                <fullName>Quicklinks</fullName>
            </value>
            <value>
                <fullName>Profiles Chamber</fullName>
            </value>
            <value>
                <fullName>Quick Console</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Quick Query</fullName>
            </value>
            <value>
                <fullName>Execute Anonymous</fullName>
            </value>
            <value>
                <fullName>Sobject fields</fullName>
            </value>
            <value>
                <fullName>Quick ORG Describe</fullName>
            </value>
            <value>
                <fullName>Replace API Names</fullName>
            </value>
            <value>
                <fullName>Convert SF Id</fullName>
            </value>
            <value>
                <fullName>Login As...</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>