force-app/main/default/objects/Security_Register__c/fields/Entry_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Entry Time</label>
    <type>DateTime</type>
</CustomField>