force-app/main/default/objects/Security_Register__c/fields/Number_of_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visitors__c</fullName>
    <label>Number of Visitors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>