force-app/main/default/objects/Security_Register__c/fields/Register_ID__c.field-meta.xml
<CustomField>
    <fullName>Register_ID__c</fullName>
    <displayFormat>REG-{0000}</displayFormat>
    <label>Register ID</label>
    <type>AutoNumber</type>
</CustomField>