force-app/main/default/objects/Security_Register__c/fields/Security_Register_Name__c.field-meta.xml
<CustomField>
    <fullName>Security_Register_Name__c</fullName>
    <label>Security Register Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>