force-app/main/default/objects/Security_Register__c/fields/Unit_Preference__c.field-meta.xml
<CustomField>
    <fullName>Unit_Preference__c</fullName>
    <label>Unit Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.5 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4.5 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Convert SF Id</fullName>
            </value>
            <value>
                <fullName>Execute Anonymous</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Login As...</fullName>
            </value>
            <value>
                <fullName>Options</fullName>
            </value>
            <value>
                <fullName>Profiles Chamber</fullName>
            </value>
            <value>
                <fullName>Quick Console</fullName>
            </value>
            <value>
                <fullName>Quicklinks</fullName>
            </value>
            <value>
                <fullName>Quick ORG Describe</fullName>
            </value>
            <value>
                <fullName>Quick Query</fullName>
            </value>
            <value>
                <fullName>Replace API Names</fullName>
            </value>
            <value>
                <fullName>Sobject fields</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>