force-app/main/default/objects/Security_Register__c/fields/Visitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Type__c</fullName>
    <label>Visitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Enquiry</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>