force-app/main/default/objects/Security_Register__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Visitor_Type__c</columns>
    <columns>Security_Register_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Number_of_Visitors__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>