force-app/main/default/objects/Security_Register__c/listViews/My_Records.listView-meta.xml
<ListView>
    <fullName>My_Records</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Budget__c</columns>
    <columns>Email__c</columns>
    <columns>Unit_Preference__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Current User</value>
    </filters>
    <label>My Records</label>
</ListView>