force-app/main/default/objects/Security_Register__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Unit_Preference__c</columns>
    <columns>Security_Register_Name__c</columns>
    <columns>Register_ID__c</columns>
    <columns>Remarks__c</columns>
    <columns>Visitor_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>