force-app/main/default/objects/Security_Register__c/listViews/Todays_Created.listView-meta.xml
<ListView>
    <fullName>Todays_Created</fullName>
    <columns>NAME</columns>
    <columns>Security_Register_Name__c</columns>
    <columns>Entry_Time__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Location__c</columns>
    <columns>Number_of_Visitors__c</columns>
    <columns>Budget__c</columns>
    <columns>Email__c</columns>
    <columns>Register_ID__c</columns>
    <columns>Unit_Preference__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Created</label>
</ListView>